# meilisearch-SDK

./: Cargo.toml
assets/: J.json  clothes.json  clothes_2.json  test.js  あきらtest.txt
src/: directory_helper.rs  main.rs  mod.rs
