[package]
name = "meilisearch-SDK"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = "0.27.1"
futures = "0.3"
serde = { version="1.0",   features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
yaup = "0.3.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
chrono = "0.4"